[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of Protocol for Asynchronous, Reliable, Secure and Efficient Consensus"
documentation = "https://docs.rs/parsec"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "parsec"
readme = "README.md"
repository = "https://github.com/maidsafe/parsec"
version = "0.5.0"

[dependencies]
ffi_utils = "~0.8.0"
lazy_static = "~1.0.1"
log = "~0.4.1"
maidsafe_utilities = "~0.17.0"
quick-error = "~1.2.2"
rand = "~0.4.2"
serde = "~1.0.66"
serde_derive = "~1.0.66"
tiny-keccak = "~1.4.2"
unwrap = "~1.2.0"

[target.'cfg(target_os="linux")'.dependencies]
procinfo = "~0.4.2"

[dev-dependencies]
clap = "~2.31.2"
proptest = "~0.8.6"

[features]
dump-graphs = []
testing = ["maidsafe_utilities/testing"]

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
